[project]
name = "iscc-core"
version = "1.3.0"
description = "ISCC - Core Algorithms"
authors = [{ name = "Titusz", email = "tp@iscc.io" }]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "iscc",
    "identifier",
    "media",
    "hash",
    "similarity",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "blake3",
    "xxhash",
    "more-itertools",
    "pybase64",
    "pydantic",
    "python-dotenv",
    "uvarint",
    "loguru",
    "base58",
    "data-url>=1.1.0",
    "jcs",
    "bitarray",
]

[project.urls]
Homepage = "https://iscc.codes"
Repository = "https://github.com/iscc/iscc-core"
Documentation = "https://core.iscc.codes/"
Changelog = "https://core.iscc.codes/changelog"
Coverage = "https://app.codecov.io/gh/iscc/iscc-core"
"Bug Tracker" = "https://github.com/iscc/iscc-core/issues"
Twitter = "https://twitter.com/iscc_foundation"
Donate = "https://iscc.foundation/support"

[dependency-groups]
test = [
    "pytest",
    "coverage",
    "pytest-cov",
]
dev = [
    "poethepoet",
    "black",
    "ruff",
    "bandit",
]
benchmark = [
    "psutil",
    "py-cpuinfo",
]
docs = [
    "mkdocs-material",
    "mkdocstrings-python",
    "mdformat",
    "mdformat_admon",
    "mdformat_tables",
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["setuptools>=77", "Cython>=3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["iscc_core*"]

[tool.setuptools.package-data]
iscc_core = ["*.json"]

[tool.black]
line-length = 100
preview = true
enable-unstable-feature = ["string_processing"]
target-version = ['py39']

[tool.coverage.report]
show_missing = true

[tool.poe.tasks]
gentests = { cmd = "python -m tests.build_test_data", help = "Generate conformance test data" }
format = { cmd = "black .", help = "Code style formatting with black" }
docs = { script = "tests.build_docs:main", help = "Copy README.md to /docs" }
format-md = { cmd = "mdformat --wrap 100 README.md", help = "Markdown formatting with mdformat" }
lf = { cmd = "python -m tools.lf", help = "Convert line endings to lf" }
test = { cmd = "pytest --cov=iscc_core --cov-fail-under=100", help = "Run tests with coverage" }
sec = { cmd = "bandit -r iscc_core -q", help = "Security check with bandit" }
all = ["gentests", "format", "docs", "format-md", "lf", "test", "sec"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux_i686 *-manylinux_i686 *-win32"
before-build = "pip install cython>=3"
test-requires = ["pytest"]
test-command = """python -c "import iscc_core; assert iscc_core.turbo(), 'Extensions not active'; assert iscc_core.conformance_selftest(), 'Conformance failed'" && pytest {project}/tests --turbo -q"""

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
